se decuelve respues de un recorrido pero parece haber lios en el procicionamiento de la matriz y en armar el recorrido correctamente
