# controllers/evento.go
@@ -46,17 +46,14 @@ func (c *EventoController) GetOne() {
 // @Title GetAll
 // @Description get Evento
 // @Param	query	query	string	false	"Filter. e.g. col1:v1,col2:v2 ..."
-// @Param	fields	query	string	false	"Fields returned. e.g. col1,col2 ..."
-// @Param	sortby	query	string	false	"Sorted-by fields. e.g. col1,col2 ..."
-// @Param	order	query	string	false	"Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ..."
-// @Param	limit	query	string	false	"Limit the size of result set. Must be an integer"
-// @Param	offset	query	string	false	"Start position of result set. Must be an integer"
 // @Success 200 {object} models.Evento
 // @Failure 403
 // @router / [get]
 func (c *EventoController) GetAll() {
 	logs.Info("entro al all")
-	models.Clasificacion()
+	recorridoEncontrado := models.Clasificacion()
+	c.Data["json"] = recorridoEncontrado
+	c.ServeJSON()
 
 }
 
